--- a/src/app/sistema-login/alteracao-senha/alteracao-senha.page.html
+++ b/src/app/sistema-login/alteracao-senha/alteracao-senha.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="/login"></ion-back-button>
     </ion-buttons>
-    <ion-title>Voltar para o Login</ion-title>
+    <ion-title class="titulos-login">Voltar para o Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
