--- a/src/app/sistema-login/esqueci-senha/esqueci-senha.page.html
+++ b/src/app/sistema-login/esqueci-senha/esqueci-senha.page.html
@@ -37,7 +37,7 @@
             </div>
             <div class="wave-group-login">
               <input required="" [type]="'email'" class="input-tecido-login" [(ngModel)]="email"
-                placeholder="Ex.: Usuário123" #inputEmailRef>
+                placeholder="Ex.: seuemail@exemplo.com" #inputEmailRef>
               <label class="label-login">
 
                 <span class="label-char-login" style="--index: 0">E</span>
