--- a/src/global.scss
+++ b/src/global.scss
@@ -630,6 +630,7 @@ ion-fab-button {
   font-size: 18px;
   font-weight: 600;
   margin-top: 20px;
+  margin-bottom: 70px;
 }
 #btSalvarAlteracoesUser{
   --background: #0e2b52;
