--- a/src/app/pages/subpages/central-ajuda/central-ajuda.page.html
+++ b/src/app/pages/subpages/central-ajuda/central-ajuda.page.html
@@ -55,7 +55,7 @@
 
   <ion-row>
     <ion-col>
-      <ion-card class="card-central-ajuda" button href="tel:190">
+      <ion-card class="card-central-ajuda" button href="https://wa.me/+5548998557523">
 
         <ion-card-content>
 
